# Rasayana

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/: settings.py  sources.yaml
data/: README.md
db/: roles.sql  schema.sql  views.sql
db/seed/: 01_reference.sql  02_property_terms.sql
docs/: design-decisions.md  entity-model.md
mcp_server/: claude_desktop_config.example.json  server.py
scripts/: load_neon.sh
tests/: test_nlsql_guardrails.py  test_smoke.py
ui/: app.py
vayu/: __init__.py  cli.py  db.py  enrich.py  kg.py  llm.py  models.py  nlsql.py  normalize.py  rag.py  seed.py
vayu/api/: main.py
vayu/etl/: __init__.py  cmaup.py  duke.py  load.py  pipeline.py  transform.py
vayu/etl/extract/: base.py  duke.py  imppat.py  pharmacopoeia.py  pubchem.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: AilmentBand.tsx  Assistant.tsx  Brand.tsx  BrowseList.tsx  DataTable.tsx  HeroCanvas.tsx  PlantCard.tsx  SearchBox.tsx  StatStrip.tsx  Topbar.tsx  icons.tsx  nav.tsx  ui.tsx
web/src/course/: Callout.tsx  CourseHome.tsx  CourseShell.tsx  progress.ts  registry.ts
web/src/lib/: api.ts  format.ts  markdown.tsx  router.ts
web/src/pages/: About.tsx  Condition.tsx  Conditions.tsx  Explore.tsx  Families.tsx  Family.tsx  Home.tsx  Library.tsx  Molecule.tsx  Molecules.tsx  PlantDetail.tsx  PlantsIndex.tsx  Sources.tsx  Target.tsx  Targets.tsx
web/src/styles/: components.css  (+1 more)
(+10 files in other folders)
