[project]
name = "vayu-materia"
version = "0.1.0"
description = "Provenance-first knowledge graph of Indian traditional-medicine formulations (Ayurveda, Unani, Siddha, Sowa Rigpa, Yoga)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "httpx>=0.27",
    "tenacity>=8.3",        # retry/backoff for source APIs (rate-limit safety)
    "pyyaml>=6.0",
    "pandas>=2.2",
    "python-slugify>=8.0",
    "openai>=1.40",        # OpenAI-compatible client for the LLM provider fallback chain
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.34",     # text-to-SQL planning + RAG answer synthesis
    "voyageai>=0.2",       # embeddings (Anthropic-recommended)
]
mcp = ["mcp>=1.2"]         # MCP server for Claude Desktop
ui = ["streamlit>=1.36"]
chem = ["rdkit>=2024.3"]   # SMILES -> InChIKey canonicalization
pdf = ["pdfplumber>=0.11"] # phase-2 pharmacopoeia extraction
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
vayu = "vayu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vayu"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
